# entropy

./: .gitignore  .gitmodules  404.html  Cargo.toml  README.md  blog.html  build.sh  debug.sh  docs.html  index.html  markdown-page.html  package-lock.json  sitemap.xml
.github/workflows/: documentation.yml
assets/js/: 0376edbd.ed7161a0.js  1be78505.1df73bf6.js  1f391b9e.f85787d0.js  37b41b1c.7c90af33.js  37b41b1c.d24c9e2a.js  393be207.04d7b4e0.js  53d1c549.aaf2eeda.js  6499f3dd.1598e84a.js  6499f3dd.8b5ea97c.js  6875c492.baeb850d.js  729.b856752b.js  814f3328.98e1b282.js  83ee2ecf.d2ee6322.js  8e9f0a8a.25d8fa7e.js  935f2afb.7285fa69.js  a2530b71.81bf9dc9.js  a2530b71.8aef7a08.js  a6aa9e1f.a9000b4f.js  b1cec44d.ef35d9bd.js  b4c6766c.3f44cdd4.js  b9065af2.589097aa.js  b9b28c91.fded7dc0.js  bdd709f1.80bcd75d.js  c4f5d8e4.c70cede8.js  c4f5d8e4.df119c4f.js  ccc49370.5ca2f855.js  common.fa501512.js  e840b3c0.6e974892.js  f5471bd6.e56079a0.js  main.34c9db82.js  main.405281db.js  main.62d02f12.js  main.9eb71576.js  main.aa244783.js  runtime~main.073fe816.js  runtime~main.b7e2bde2.js  runtime~main.c0a4c202.js  runtime~main.f3fd44c9.js
blog/: atom.xml  hola.html  rss.xml  tags.html
blog/tags/: docusaurus.html  hola.html
data/: hwi.csv
docs/: dataframes.html  docusaurus.config.js  package-lock.json  series.html
docs/Dataframes/: dataframes.html  import.html
docs/Series/: seriesf64.html  seriesi32.html  seriesstr.html
docs/docs/: 01-index.md
docs/docs/02-Series/: 01-index.md  02-seriesi32.md  03-seriesf64.md  04-seriesstr.md
docs/docs/03-Dataframes/: 01-index.md  02-import.md  03-dataframes.md
docs/src/components/: HomepageFeatures.js
docs/src/pages/: index.js
src/: lib.rs  mod.rs
src/dataframe/: dataframe.rs  maths.rs  mod.rs  todo-dataframe.md
src/series/: mod.rs
src/series/floats/: maths.rs  mod.rs  new.rs  series_f64.rs  todo-floats.md
src/series/integers/: math.rs  mod.rs  new.rs  series_i32.rs  todo-integers.md
src/series/strings/: mod.rs  series_str.rs
src/series_reader/: mod.rs
src/series_reader/dataframe_reader/: mod.rs
src/series_reader/floats/: mod.rs
src/series_reader/integers/: mod.rs
src/series_reader/strings/: mod.rs
web/: index.html  index.js  styles.css  utils.js
