[package]
authors = ["Archit Bhonsle <abhonsle2000@gmail.com>"]
description = "WebAssembly implementation of vectors and matrices"
edition = "2018"
license = "APACHE"
name = "entropy"
repository = "https://github.com/wasml/entropy"
version = "0.1.0"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
serde-wasm-bindgen = "0.1"
console_error_panic_hook = {version = "0.1", optional = true}
js-sys = "0.3"
ndarray = {version = "0.15", features = ["serde"]}
serde = {version = "1.0", features = ["derive"]}
wasm-bindgen = {version = "0.2", features = ["serde-serialize"]}
wee_alloc = {version = "0.4", optional = true}
linalg = {path="./dependencies/linalg/", default-features = false}

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[profile.release]
opt-level = "s"
