[package]
authors = ["Dion Pinto <dionpinto000@gmail.com>"]
description = "WebAssembly implementation of Series and Dataframes"
edition = "2018"
license = "Apache-2.0"
name = "entropy"
keywords = ["Series", "Dataframe"]
repository = "https://github.com/ml-wasm/entropy"
version = "0.1.0"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
serde-wasm-bindgen = "0.1"
console_error_panic_hook = {version = "0.1", optional = true}
ndarray = {version = "0.15", features = ["serde"]}
serde = {version = "1.0", features = ["derive"]}
wasm-bindgen = {version = "0.2", features = ["serde-serialize"]}
wee_alloc = {version = "0.4", optional = true}
js-sys = "0.3"
wasm-bindgen-futures = "0.4.22"
csv = "1.1"
arrow = { version = "5.0", default-features = false, features = ["csv"] }
prettytable-rs = { version="0.8.0", git = "https://github.com/phsym/prettytable-rs", branch = "master"}
linalg = {path="./dependencies/linalg", default-features = false}

[dependencies.web-sys]
version = "0.3"
features = [
  "File",
]

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[profile.release]
opt-level = 3
